--- a/proyecto/Views/Shared/_Layout.cshtml
+++ b/proyecto/Views/Shared/_Layout.cshtml
@@ -35,16 +35,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Pasajero" asp-action="Index">Pasajero</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pago" asp-action="Index">Pago</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vuelo" asp-action="Index">Vuelo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Reserva" asp-action="Index">Reserva</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Aeropuerto" asp-action="Index">Aeropuerto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Avion" asp-action="Index">Avion</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
