--- a/proyecto/Views/Shared/_Layout.cshtml
+++ b/proyecto/Views/Shared/_Layout.cshtml
@@ -41,6 +41,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Avion" asp-action="Index">Avion</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pais" asp-action="Index">Pais</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Aerolinea" asp-action="Index">Aerolinea</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
@@ -49,6 +55,7 @@
         </nav>
     </header>
     <div class="container">
+        <partial name="_LoginPartial" /> 
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
