--- a/proyecto/Views/Shared/_LoginPartial.cshtml
+++ b/proyecto/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using proyecto.Areas.Identity.Data
+@using proyecto.Models
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
